EC-639 - Added HttpClientUtils and CustomHttpClient tests